cros: Show selection highlight on shelf when a menu shows

Per UX Request:
For all MenuShowSource types, show a highlight when a menu is shown.

This was already working for touch menus.

This also fixes the bug where the ink drop bubble was "Bursting"
regardless of the prior ink drop state.

Bug: 844779
Change-Id: I715300a7447ad099b6a610b34e8a30a2170d6e4c
Reviewed-on: https://chromium-review.googlesource.com/1095637
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Commit-Queue: Alex Newcomer <newcomer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#567488}
Former-commit-id: 0d775506241f1de12775567de4f153e736c73b72